<resources>
    <string name="app_name">SIGNAL</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="find_id">아이디찾기</string>
    <string name="find_pw">비밀번호찾기</string>
    <string name="register">회원가입</string>

    <string name="facebook_login">FACEBOOK</string>
    <string name="kakao_login">KAKAO</string>

    <!-- Strings related to Register -->
    <string name="welcome_string">당신을   표현해보세요</string>
    <string name="regist_id">아이디</string>
    <string name="regist_pw">비밀번호</string>
    <string name="regist_pw_con">비밀번호 확인</string>
    <string name="regist_name">이름</string>
    <string name="regist_job">직업</string>
    <string name="regist_phone_num">휴대전화</string>

    <!-- Strings related to Set Img-->
    <string name="set_img_title">사진 설정하기</string>
    <string name="img_from_gallary">앨범에서 사진 선택</string>
    <string name="img_from_camera">사진 찍기</string>

    <!-- String related to Main -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">홈</string>
    <string name="title_mypage">마이페이지</string>
    <string name="title_notifications">알림</string>
    <string name="title_more">더보기</string>

    <!-- String related to search -->
    <string name="search">만나고 싶은 사람을 찾아보세요</string>
    <string name="add_publisher">내가 찾는 사람이 없어요</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
