<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    tools:context="org.androidtown.signalapplication.Activities.ImageActivity"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/underbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/set_img_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/img_album_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img_from_gallary"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/img_camera_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img_from_camera"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

</LinearLayout>
