<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.androidtown.signalapplication.Activities.LoginActivity"
    android:background="@mipmap/background">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars = "none">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginLogo_imageView"
                android:layout_width="202dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/pic_login_logotype"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme = "@style/textTheme"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textTheme"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/button_color"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:background="@drawable/underbar">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:id="@+id/find_id"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/sidebar"
                    android:text="@string/find_id"
                    android:textSize="@dimen/samll_text_size"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:id="@+id/find_pw"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/sidebar"
                    android:text="@string/find_pw"
                    android:textSize="@dimen/samll_text_size"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingRight="8dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:id="@+id/join_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAllCaps="false"
                    android:background="@drawable/siderightbar"
                    android:text="@string/join_in"
                    android:textSize="@dimen/samll_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:weightSum="1">

                <Button
                    android:id="@+id/facebook_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/facebook_button_color"
                    android:text="@string/facebook_login"
                    android:textColor="@color/facebook_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.57" />
                <Button
                    android:id="@+id/kakao_button"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:background="@color/kakao_button_color"
                    android:text="@string/kakaotalk_login"
                    android:textColor="@color/kakao_text_color"
                    android:textSize="@dimen/button_text_size"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
